--- a/citi-bike-map/public/index.html
+++ b/citi-bike-map/public/index.html
@@ -384,7 +384,7 @@
     </script>
 
     <script async
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC0xKjfAzB4BPLhYfaGibkCYXLjNBoUZco&callback=initMap"
+        src="https://maps.googleapis.com/maps/api/js?key=yourapikeycallback=initMap"
         defer></script>
 </body>
 
